stoat/src/snapshots/stoat__test_harness__tool_card_expanded.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 60x12
---
[0m[90mClaude[0m

[0m[1m[34m⏺ Bash(ls)[0m
[0m[32m  done[0m
[0m[90m  ├─ input: {"command":"ls"}[0m
[0m[90m  └─ output:[0m
[0m[90m     a[0m
[0m[90m     b[0m
[0m[90m     c[0m
[0m[90m------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                    [0m
