stoat/src/snapshots/stoat__test_harness__tool_card_status_badge_cancelled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 60x10
---
[0m[38;2;128;128;128mClaude[0m




[0m[38;2;86;156;214m⏺ Bash(sleep 60)[0m
[0m[38;2;128;128;128m  cancelled[0m
[0m[38;2;128;128;128m------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;128;128;128m (unnamed) [0m[38;2;204;204;204m[48;2;128;128;128m[claude]                                    [0m
