stoat/src/snapshots/stoat__test_harness__tool_card_status_badge_done.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 60x10
---
[0m[90mClaude[0m



[0m[34m⏺ Bash(ls)[0m
[0m[32m  done[0m
[0m[90m  └─ a (+1 more lines)[0m
[0m[90m------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                    [0m
