stoat/src/snapshots/stoat__test_harness__workspace_picker_listing.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: s
focused: #1 of 1
mode: insert
size: 80x24
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                            [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m┌ workspaces ──────────────────────────────────────────────────────────────┐[0m[38;2;250;250;250m[48;2;40;44;52m  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;229;192;123m[48;2;40;44;52m>[0m[38;2;250;250;250m[48;2;40;44;52m [0m[7m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;250;250;250m[48;2;40;44;52m                                                                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│──────────────────────────────────────────────────────────────────────────│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52mname[0m[38;2;250;250;250m[48;2;40;44;52m                                                  [0m[38;2;99;109;131m[48;2;40;44;52m  buf  run  edit[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194m   (unnamed)                  [0m[38;2;99;109;131m[48;2;40;44;52m┌ picker ─────────────────────────────────────┐[0m
[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m└──────────────────────────────│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m  Up, C-p[0m[38;2;250;250;250m[48;2;40;44;52m   previous picker row             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m  Dn, C-n[0m[38;2;250;250;250m[48;2;40;44;52m   next picker row                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mC-f, PgDn[0m[38;2;250;250;250m[48;2;40;44;52m   page the picker down            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mC-b, PgUp[0m[38;2;250;250;250m[48;2;40;44;52m   page the picker up              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      Tab[0m[38;2;250;250;250m[48;2;40;44;52m   complete from the picker        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      Del[0m[38;2;250;250;250m[48;2;40;44;52m   delete the picker row's session [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      Ret[0m[38;2;250;250;250m[48;2;40;44;52m   submit prompt input             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m      Esc[0m[38;2;250;250;250m[48;2;40;44;52m   cancel prompt input             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                 [0m[38;2;99;109;131m[48;2;40;44;52m└─────────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [scratch] [0m[38;2;99;109;131m[48;2;99;109;131m─────────────────────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
